<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hombot Control</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>

    <string name="global_map">Global map</string>

    <string name="section_status">Status</string>
    <string name="section_joy">Control</string>
    <string name="section_schedule">Schedule</string>
    <string name="section_map">Map</string>

    <string name="bot_name">Bot name</string>
    <string name="bot_address">Bot address and port</string>

    <string name="bot_select">Select Bot</string>
    <string name="bot_edit">Edit bot</string>
    <string name="bot_add">Add bot</string>

    <string name="map_blocks">Blocks</string>
    <string name="map_type_floor">Floor</string>
    <string name="map_type_wall">Wall</string>

    <string name="map_flag_bump">Bump</string>
    <string name="map_flag_bump_abyss">Bump abyss</string>
    <string name="map_flag_abyss">Abyss</string>
    <string name="map_flag_sneak">Sneak</string>
    <string name="map_flag_screw">Screw</string>
    <string name="map_flag_move_object">Move object</string>
    <string name="map_flag_fight">Fight</string>
    <string name="map_flag_undetermined">Undetermined</string>

    <string name="command_turbo">Turbo</string>
    <string name="command_mode">Mode</string>
    <string name="command_home">Home</string>
    <string name="command_repeat">Repeat</string>
    <string name="command_start">Start</string>
    <string name="command_pause">Pause</string>

    <string name="joycenter">Stop\nOK</string>

    <string name="command_myspace">My Space</string>
    <string name="command_spiral">Spiral</string>

    <string name="schedule_save">Save schedule</string>
    <string name="schedule_saved">Schedule saved!</string>
    <string-array name="schedule_mode_titles">
        <item>Zigzag</item>
        <item>Cell by Cell</item>
    </string-array>
    <string-array name="schedule_modes">
        <item>ZZ</item>
        <item>SB</item>
    </string-array>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="mybots">My Bots</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_remembersection">Remember last screen</string>
    <string name="pref_desc_remembersection_on">Reopen last screen on app start</string>
    <string name="pref_desc_remembersection_off">Show status screen on app start</string>

    <string name="pref_title_combine_remote">Combine Status and Control sections</string>
    <string name="pref_desc_combine_remote_on">Show only one Section</string>
    <string name="pref_desc_combine_remote_off">Show Status and Remote sections</string>

    <string name="pref_category_colors">Colors</string>

    <string name="pref_title_color_theme">Theme</string>
    <string-array name="pref_color_theme_titles">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="pref_color_theme_values">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="pref_default_color_theme">light</string>

    <string name="pref_title_color_primary">Primary color</string>
    <string name="pref_desc_color_primary">Primary color of the interface</string>
    <string name="pref_default_color_primary">#c40452</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_joy">Remote Control</string>

    <string name="pref_title_joy_instaclean">Immediately start cleaning</string>
    <string name="pref_desc_joy_instaclean_on">Cleaning starts automatically after mode selection</string>
    <string name="pref_desc_joy_instaclean_off">Start cleaning manually after mode selection</string>

    <string name="pref_title_joy_driveinterval">Drive command interval</string>
    <string name="pref_title_joy_turninterval">Turn command interval</string>
    <string-array name="pref_joy_interval_titles">
        <item>300 ms</item>
        <item>400 ms</item>
        <item>500 ms</item>
        <item>600 ms</item>
        <item>700 ms</item>
        <item>800 ms</item>
    </string-array>
    <string-array name="pref_joy_interval_values">
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
    </string-array>
    <string name="title_activity_bot_manager">My Hombots</string>

</resources>
