<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="16dp">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="de.jlab.android.hombot.sections.common.StatusFragment"
            android:id="@+id/ct_status"
            android:layout_gravity="center"
            tools:layout="@layout/display" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/ct_controls"
        android:layout_weight="0.6">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.3">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/command_turbo"
                    android:id="@+id/cm_turbo"
                    style="@style/control_button"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/command_mode"
                    android:id="@+id/cm_mode"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/command_repeat"
                    android:id="@+id/cm_repeat"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/command_home"
                    android:id="@+id/cm_home"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/command_start"
                    android:id="@+id/cm_startstop"
                    android:minWidth="88dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp">

                <FrameLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/joy_bg"
                    android:id="@+id/ct_joy"
                    android:focusableInTouchMode="false"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/joycenter"
                        android:id="@+id/ct_joy_label"
                        android:layout_gravity="center"
                        android:gravity="center" />
                </FrameLayout>
            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
