<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="de.jlab.android.hombot.sections.common.StatusFragment"
            android:id="@+id/ct_status"
            android:layout_gravity="center"
            tools:layout="@layout/display" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/ct_controls"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="32dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:text="@string/command_turbo"
                    android:id="@+id/cm_turbo"
                    style="@style/control_button"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:text="@string/command_mode"
                    android:id="@+id/cm_mode"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:text="@string/command_repeat"
                    android:id="@+id/cm_repeat"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    style="@style/control_button"
                    android:layout_width="96dp"
                    android:layout_height="64dp"
                    android:text="@string/command_home"
                    android:id="@+id/cm_home"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp" />

                <Button
                    style="@style/control_button"
                    android:layout_width="96dp"
                    android:layout_height="64dp"
                    android:text="@string/command_start"
                    android:id="@+id/cm_startstop"
                    android:layout_gravity="center_horizontal"
                    android:minWidth="88dp"
                    android:layout_marginLeft="4dp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
